# landscape

./: .gitignore  Cargo.toml  build.sh  dev.sh  gen_ts_bindings.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  web.sh
.github/workflows/: build-and-release.yml  check.yml  publish-types.yml
landscape/: Cargo.toml
landscape-common/: Cargo.toml
landscape-common/src/: api_response.rs  info.rs  ip_mark.rs  ipv6_pd.rs  lib.rs  net.rs  network.rs
landscape-common/src/auth/: mod.rs
landscape-common/src/config/: dns.rs  firewall.rs  flow.rs  geo.rs  iface.rs  iface_ip.rs  mod.rs  mss_clamp.rs  nat.rs  ppp.rs  ra.rs  route_lan.rs  route_wan.rs  wifi.rs
landscape-common/src/database/: mod.rs  repository.rs
landscape-common/src/dev/: mod.rs
landscape-common/src/dhcp/: mod.rs
landscape-common/src/dhcp/v4_server/: config.rs  status.rs
landscape-common/src/dhcp/v6_client/: config.rs
landscape-common/src/dns/: check.rs  config.rs  redirect.rs  upstream.rs
landscape-common/src/docker/: image.rs  mod.rs  network.rs
landscape-common/src/enrolled_device/: mod.rs
landscape-common/src/error/: mod.rs
landscape-common/src/event/: dns.rs
landscape-common/src/firewall/: blacklist.rs  mod.rs
landscape-common/src/flow/: config.rs  mark.rs  mod.rs
landscape-common/src/iface/: dev_wifi.rs  mod.rs
landscape-common/src/lan_services/ipv6_ra/: mod.rs
landscape-common/src/metric/: connect.rs  dns.rs
landscape-common/src/pty/: mod.rs
landscape-common/src/route/: mod.rs  trace.rs
landscape-common/src/service/: controller.rs  manager.rs  mod.rs  service_manager_v2.rs
landscape-database/migration/src/: lib.rs  m20260222_154411_geo_source_type.rs  m20260222_171753_firewall_blacklist.rs  m20260226_001739_pppd_plugin.rs
landscape-database/src/: lib.rs  provider.rs  repository.rs
landscape-database/src/dhcp_v4_server/: entity.rs  repository.rs
landscape-database/src/dhcp_v6_client/: entity.rs  repository.rs
landscape-database/src/dns_redirect/: entity.rs  repository.rs
landscape-database/src/dns_rule/: entity.rs  repository.rs
landscape-database/src/dns_upstream/: entity.rs  repository.rs
landscape-database/src/dst_ip_rule/: entity.rs  repository.rs
landscape-database/src/enrolled_device/: entity.rs  repository.rs
landscape-database/src/firewall/: entity.rs  repository.rs
landscape-database/src/firewall_blacklist/: entity.rs  repository.rs
landscape-database/src/firewall_rule/: entity.rs  repository.rs
landscape-database/src/flow_rule/: entity.rs  repository.rs
landscape-database/src/flow_wan/: entity.rs  repository.rs
landscape-database/src/geo_ip/: entity.rs  repository.rs
landscape-database/src/geo_site/: entity.rs  repository.rs
landscape-database/src/iface/: entity.rs  repository.rs
landscape-database/src/iface_ip/: entity.rs  repository.rs
landscape-database/src/mss_clamp/: entity.rs  repository.rs
landscape-database/src/nat/: entity.rs  repository.rs
landscape-database/src/pppd/: entity.rs  repository.rs
landscape-database/src/ra/: entity.rs  repository.rs
landscape-database/src/route_lan/: entity.rs  repository.rs
landscape-dns/src/: lib.rs  server.rs
landscape-ebpf/src/: lib.rs
landscape-macro/src/: lib.rs
landscape-types/: .gitignore  .npmignore  README.md  orval.config.ts  package.json
landscape-types/src/: docker.d.ts  flow.d.ts  iface.d.ts  mutator.ts  network.d.ts
landscape-webserver/: Cargo.toml
landscape-webserver/src/: api.rs  devices.rs  iface.rs  interfaces.rs  main.rs  openapi.rs  sysinfo.rs
landscape-webserver/src/auth/: error.rs  mod.rs
landscape-webserver/src/config_service/: dns_redirect.rs  dns_rule.rs  dns_upstream.rs  dst_ip_rule.rs  enrolled_device.rs  firewall_blacklist.rs  firewall_rule.rs  flow_rule.rs  geo_ip.rs  geo_site.rs  mod.rs  static_nat_mapping.rs
landscape-webserver/src/dns/: mod.rs  redirects.rs  rules.rs  service.rs  upstreams.rs
landscape-webserver/src/docker/: error.rs  image.rs  mod.rs  network.rs
landscape-webserver/src/error/: mod.rs
landscape-webserver/src/firewall/: blacklists.rs  mod.rs  rules.rs
landscape-webserver/src/flow/: dst_ip_rules.rs  mod.rs  rules.rs
landscape-webserver/src/geo/: ips.rs  mod.rs  sites.rs
landscape-webserver/src/metric/: mod.rs
landscape-webserver/src/metrics/: mod.rs
landscape-webserver/src/nat/: mod.rs  static_mappings.rs
landscape-webserver/src/service/: dhcp_v4.rs  firewall.rs  flow_wan.rs  icmp_ra.rs  ipconfig.rs  ipv6pd.rs  mss_clamp.rs  nat.rs  pppd.rs  route.rs  route_lan.rs  route_wan.rs  wifi.rs
landscape-webserver/src/services/: dhcp_v4.rs  firewall.rs  icmp_ra.rs  ip.rs  ipv6pd.rs  lan.rs  mod.rs  mss_clamp.rs  nat.rs  pppoe.rs  routing.rs  wan.rs  wifi.rs
landscape-webserver/src/sys_service/: dns_service.rs
landscape-webserver/src/sys_service/config/: metric.rs  mod.rs  ui.rs
landscape-webserver/src/system/: config.rs  dns_config.rs  info.rs  metric_config.rs  mod.rs  ui_config.rs
landscape-webserver/src/websocket/: docker_task.rs  web_pty.rs
landscape-webui/: .gitignore  package.json  tsconfig.json  vite.config.ts
landscape-webui/src/: main.ts
landscape/src/config_service/: dns_rule.rs  dst_ip_rule.rs  enrolled_device.rs  firewall_blacklist.rs  firewall_rule.rs  flow_rule.rs  geo_ip_service.rs  geo_site_service.rs  mod.rs  static_nat_mapping.rs
landscape/src/config_service/dns/: redirect.rs  upstream.rs
landscape/src/dhcp_client/: v4.rs  v6.rs
landscape/src/dhcp_server/: dhcp_server_new.rs
landscape/src/docker/: mod.rs
landscape/src/firewall/: blacklist.rs  mod.rs
landscape/src/icmp/: v6.rs
landscape/src/iface/: mod.rs
landscape/src/metric/: connect_manager.rs  dns_manager.rs  mod.rs  noop_store.rs
landscape/src/metric/duckdb/: connect.rs  mod.rs
landscape/src/route/: mod.rs
landscape/src/service/: dhcp_v4.rs  ipconfig.rs  ipv6pd.rs  mss_clamp.rs  nat_service.rs  pppd_service.rs  ra.rs  route_lan.rs  route_wan.rs
landscape/src/sys_service/: config_service.rs  dns_service.rs  ebpf_service.rs
landscape/src/wifi/: mod.rs
scripts/: build_webpage.sh
(+220 files in other folders)
