[workspace.package]
version = "0.14.1"
edition = "2021"


[workspace]
members = [
    "landscape",
    "landscape-common",
    "landscape-database",
    "landscape-macro",
    "landscape-database/migration",
    "landscape-dns",
    "landscape-ebpf",
    "landscape-protobuf",
    "landscape-webserver",
]

resolver = "2"
default-members = ["landscape-webserver"]


[workspace.dependencies]
# const_format = "0.2.34"
sysinfo = "0.37.2"

# base
anyhow = "1.0.100"
once_cell = "1.21.3"
ctrlc = "3.5.1"
libc = "0.2.178"
homedir = "0.3.6"
hostname = "0.4.2"
thiserror = "2.0.17"
rand = "0.9.2"
regex = "1.12.2"
socket2 = "0.6.1"
paste = "1.0.15"
chrono = "0.4.42"
arc-swap = "1.8.0"

sysctl = "0.7.1"

colored = "3.0.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.28", default-features = false, features = [
    "rustls-tls",
] }

# cert
rustls = { version = "0.23.35", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
rcgen = "0.14.6"
rustls-pemfile = "2.2.0"

dhcproto = "0.14.0"

# libbpf
libbpf-rs = { version = "0.25.0" }
libbpf-cargo = { version = "0.25.0" }
libbpf-sys = { version = "1.5.1" }

# web
axum = { version = "0.8.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.12.3", features = [
    "typed-header",
    "with-rejection",
] }
axum-server = "0.8.0"

# serde
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.147" }
bincode = { version = "2.0.1", features = ["std", "serde"] }
toml = "0.9.8"
toml_edit = "0.22.24"
fs2 = "0.4.3"
sha2 = "0.10.8"

rtnetlink = { version = "0.14.1" }
netlink-packet-route = { version = "0.19.0" }
netlink-packet-core = { version = "0.7.0" }
netlink-sys = { version = "0.8.6" }
wl-nl80211 = { version = "0.2.0" }

# for docker
bollard = "0.19.4"

# logs
# log = "0.4.22"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"

# export to ts
ts-rs = { version = "11.1.0", features = [
    "format",
    "serde-compat",
    "uuid-impl",
] }

# async
async-trait = "0.1.89"
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.17", features = ["codec", "net"] }

cidr = { version = "0.3.2" }
idna = "1.0.3"

# databse
sea-orm = { version = "1.1.19" }
sea-orm-migration = { version = "1.1.19" }

# mem for dev
jemallocator = "0.5"
jemalloc-ctl = "0.5"

# hickory
hickory-server = "0.25.2"
hickory-client = "0.25.2"
hickory-resolver = "0.25.2"
hickory-proto = "0.25.2"

# polars 
polars = { version = "0.52.0", features = ["dtype-u16", "dtype-u8"] }
# duckdb
duckdb = { version = "1.4.4", features = ["r2d2", "chrono"] }
r2d2 = "0.8.10"

portable-pty = { version = "0.9.0" }

etherparse = "0.19.0"
zerocopy = "0.8.31"

# openapi
utoipa = { version = "5", features = ["uuid", "openapi_extensions"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }

[workspace.dependencies.nix]
version = "0.30.1"

[workspace.dependencies.uuid]
version = "1.19.0"
features = ["v4", "serde"]

[workspace.dependencies.tokio]
version = "1.48.0"

[workspace.dependencies.pnet]
version = "0.35.0"

[workspace.dependencies.clap]
version = "4.5.53"
default-features = false
features = ["std", "derive", "help", "usage", "env"]
