[package]
name = "landscape-webserver"
version.workspace = true
edition.workspace = true

[dependencies]
landscape = { path = "../landscape" }
landscape-dns = { path = "../landscape-dns" }
landscape-common = { path = "../landscape-common", features = ["openapi"] }
landscape-database = { path = "../landscape-database" }
landscape-ebpf = { path = "../landscape-ebpf" }


rustls = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

colored = { workspace = true }
jsonwebtoken = "9"
once_cell = { workspace = true }

tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls"] }

homedir = { workspace = true }

futures = "0.3"

futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }

thiserror = { workspace = true }

tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }

serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }

bollard = { workspace = true }

rand = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }

# logs
tracing = { workspace = true }

[features]
default = []
static = ["landscape-ebpf/static"]
metric-duckdb = ["landscape/metric-duckdb"]
duckdb-bundled = ["landscape/duckdb-bundled"]
