[package]
name = "landscape"
version.workspace = true
edition.workspace = true

[dependencies]
landscape-ebpf = { path = "../landscape-ebpf" }
landscape-common = { path = "../landscape-common" }
landscape-database = { path = "../landscape-database" }
landscape-dns = { path = "../landscape-dns" }
landscape-protobuf = { path = "../landscape-protobuf" }

paste = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
fs2 = { workspace = true }
sha2 = { workspace = true }
# const_format = { workspace = true }
# rusty_network_manager = "0.5.1"
tokio-stream = "0.1.14"
zbus = "4.1.2"
sysinfo = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
arc-swap = { workspace = true }
reqwest = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

rtnetlink = { workspace = true }
netlink-sys = { workspace = true }
netlink-packet-route = { workspace = true }
netlink-packet-core = { workspace = true }
wl-nl80211 = { workspace = true }
# async-std = { version = "1.9.0", features = ["attributes"] }
libc = { workspace = true }
bytes = "1.0"
futures = "0.3.11"
ctrlc = { workspace = true }

cidr = { workspace = true }

hickory-proto = { workspace = true, features = ["serde"] }
socket2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

chrono = { workspace = true }

tokio = { workspace = true, features = ["full", "net", "io-util"] }
tokio-util = { workspace = true }
rand = { workspace = true }

clap = { workspace = true }
bollard = { workspace = true }
regex = { workspace = true }

# logs
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }

dhcproto = { workspace = true }

sysctl = { workspace = true }

portable-pty = { workspace = true }
# pseudoterminal = { version = "0.2.1", features = ["non-blocking"] }

polars = { workspace = true, features = ["lazy", "parquet"], optional = true }
duckdb = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }

etherparse = { workspace = true }
dashmap = { version = "6.1.0", optional = true }

[dependencies.pnet]
workspace = true

[features]
default = []
polars = ["dep:polars"]
metric-duckdb = ["dep:duckdb", "dep:r2d2", "dep:dashmap"]
duckdb-bundled = ["metric-duckdb", "duckdb/bundled"]
